--- a/index.html
+++ b/index.html
@@ -11,18 +11,25 @@
 <body>
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
-        <span>H</span>
+        <span>P</span>
         <span>A</span>
-        <span>L</span>
-        <span>L</span>
+        <span>R</span>
+        <span>A</span>
+        <span>T</span>
+        <span>I</span>
+        <span>M</span>
+        <span>I</span>
+        <span>A</span>
+        <span>M</span>
         <span>O</span>
+        <span>R</span>
     </div>
     <div class="description">
-        <span>Aku ada hadiah spesial buat kamu!!</span>
+        <span>Quiero recordarte a base de este regalo que eres una persona increible mi mari la cual me alegra haber conocido una persona que me lleno de alegria, por eso quiero darte este regalo para que recuerdes que te amo 🥰</span>
     </div>
     <div class="button">
         <button>
-            <a href="flower.html">Klik disini</a>
+            <a href="flower.html">presionar</a>
         </button>
         
     </div>
